After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 660079 - reference leak
reference leak
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: power
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Richard Hughes
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2011-09-25 19:48 UTC by Matthias Clasen
Modified: 2011-09-26 09:07 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Matthias Clasen 2011-09-25 19:48:25 UTC
My reading of engine_get_primary_device is that it returns a new reference.
The sole caller in handle_method_call_main seems to leak that reference.
Comment 1 Richard Hughes 2011-09-26 09:07:54 UTC
Agreed, and we also ref the devices_array unnecessarily.

commit 09c582d9e31580fbfced001811006617dfad5ef9
Author: Richard Hughes <richard@hughsie.com>
Date:   Mon Sep 26 10:06:13 2011 +0100

    power: Fix two small reference leaks when using the D-Bus interface
    
    Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=660079

I'll push this to 3-2 after the hard code freeze.