power: Fix two small reference leaks when using the D-Bus interface

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=660079